--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 .profile-image {
@@ -20,6 +35,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin: 8px;
 }
 
 .logo {
@@ -27,7 +43,13 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 16px;
 }
+
+/*
+.notification {
+  margin: 16px;
+}*/
 
 button {
   border: none;
@@ -45,4 +67,11 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
 }
+
