--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,11 +15,34 @@ body {
   justify-content: center;
 }
 
+/* added this selector */
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bolder;
+  font-size: larger;
+}
+
+/* added this selector */
+.content {
+}
+
+.text {
+  margin-top: 8px;
+  margin-bottom: 16px;
+}
+
+
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+/* additions */
+  display: flex;
+  padding: 16px;
+  gap: 16px;
 }
 
 .icon {
@@ -33,6 +56,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* added */
+  flex-shrink: 0;
 }
 
 .close-button {
