--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,46 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  /* added */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* added */
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* added */
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+/* added */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  /* margin-top: auto; */
+  background-color: #eee;
+}
+
+/* added */
+ul {
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  padding: 0px 16px;
+}
+
+/* added */
+a {
+  text-decoration: none;
+  color: grey;
 }
 
 img {
@@ -16,6 +56,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  /* added */
+  padding: 8px 16px;
 }
 
 input {
