--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,83 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /* add */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+/* add */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 24px;
+}
+
+/* add */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* add */
+li {
+  margin-bottom: 16px;
+}
+
+/* add */
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+/* add */
+.content {
+  display: flex;
+  margin: 0;
+  flex-grow: 1;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /* add */
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+  font-weight: 900;
+  font-size: 32px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /* add */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
-  width: 300px;
+  /* updated from width */
+  min-width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  /* added */
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  /* add */
+  width: 256px;
+  height: 300px;
+  padding: 16px;
 }
